--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                     <p class="header-text-1">BUILD WITH FREE IMAGINATION</p>
                     <p class="header-text-2">ONLINE PORTFOLIOS<br> FOR CREATIVES</p>
                     <p class="header-text-3">Portfoliobox lets you build your own online portfolio you<br> can mange galleries,e-commerce, blogs and much more</p>
-                    <button href="#featured" class="header-btn">CURRENT WORK</button>
-                    <button class="header-btn">GET STARTED</button>
+                    <a href="#featured">
+                    <button class="header-btn">CURRENT PROJECTS</button>
+                    </a>
+                    <button class="header-btn">RANDOM PROJECT</button>
                 </div>
             </div>
             <svg id="curve" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 175.88">
@@ -51,14 +53,14 @@
     <div class="about-me">
         <div class="container">
             <div class="intro-row">
-                <div class="intro-column">
+                <div class="intro-column-left">
                     <h1 class="intro-header">Hi, I'm<span style="color: #e63946"> Gerard</span></h1>
                     <p class="intro-text">Aspiring Web Developer, Programmer and 2D Compositor <br> facinated in creating new and intresting Projects. </p>
                     <p class="intro-text">Currently based in Hampshire, UK, specialising in<br>
                     Digital Asset Management for <span style="color: black";>Huawei.</span></p>
-                    <button class="intro-button">Check out my work</button>
+                    <button class="intro-button">Check out my Speciality's</button>
                 </div>
-                <div class="intro-column">
+                <div class="intro-column-right">
                     <img src="Images/Intro/Gerard_Marshall.png" class="intro-img">
                 </div>
             </div>
@@ -75,7 +77,7 @@
                         <img class="skills-img" src="Images/Portfolio/design%20-%20Copy.png"> 
                         <h2 class="skills-head" style="color:#e63946";>Web-Design</h2>
                         <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
-                        <button class="skills-button">Click Here</button>
+                        <!-- <button class="skills-button">Click Here</button> -->
                     </div>
                 </div>
                 <div class="skills-column">  
@@ -84,7 +86,7 @@
                         <h2 class="skills-head" style="color: #457b9d">Programming</h2>
                         <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
                     <div class="skills-box-1">
-                        <button class="skills-button-1">Click Here</button>
+                        <!-- <button class="skills-button-1">Click Here</button> -->
                     </div>
                     </div>
                 </div>
@@ -94,7 +96,7 @@
                         <img class="skills-img" src="Images/Portfolio/com%20-%20Copy.png"> 
                         <h2 class="skills-head" style="color: #f4a261">2D Compositing</h2>
                         <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
-                        <button class="skills-button-2">Click Here</button>
+                        <!-- <button class="skills-button-2">Click Here</button> -->
                     </div>
                 </div>     
             </div>  
@@ -110,47 +112,47 @@
         </svg>
         <div class="container">
             <div class="folio-head">
-                <h2>AN ONLINE PORTFOLIO TOOL MADE FOR YOU</h2>
+                <h2>MOST RECENT PROJECTS</h2>
                 <hr class="folio-solid"><br>
-                </div>
+            </div>
             <div class="folio-row">
                 <div class="folio-column">
                     <div class="folio-box">
-                        <img class="folio-img" src="Images/Portfolio/maxresdefault.jpg">
-                        <p class="folio-text">CREATING A HOMEBUILT NAZ</p>
+                        <img class="folio-img" src="Images/Front_Page/Gaming.jpg">
+                        <p class="folio-text">GAMING</p>
                     </div>
                 </div>
                 <div class="folio-column">
                      <div class="folio-box">
                          <a href="Webserver.html">
-                        <img class="folio-img" src="Images/Front_Page/Rasberry.jpg">
-                        <p class="folio-text">RASBERRY PI WEB SERVER</p></a>
+                        <img class="folio-img" src="Images/Front_Page/Networking.png">
+                        <p class="folio-text">NETWORKING</p></a>
                     </div>
                 </div>
                 <div class="folio-column">
                      <div class="folio-box">
-                        <img class="folio-img" src="Images/Portfolio/website-setup.png">
-                        <p class="folio-text">PORTFOLIO WEBSITE TUTORIAL</p>
+                        <img class="folio-img" src="Images/Front_Page/Programming.jpg">
+                        <p class="folio-text">PROGRAMMING</p>
                     </div>
                 </div>
             </div>
             <div class="folio-row">
                 <div class="folio-column">
                     <div class="folio-box">
-                        <img class="folio-img" src="Images/Front_Page/outer-banks-web-development-hosting.jpg">
-                        <p class="folio-text">PHOTOGRAPHERS</p>
+                        <img class="folio-img" src="Images/Front_Page/Digital%20Assets.png">
+                        <p class="folio-text">ASSET MANAGEMENT</p>
                     </div>
                 </div>
                 <div class="folio-column">
                      <div class="folio-box">
-                        <img class="folio-img" src="Images/Front_Page/outer-banks-web-development-hosting.jpg">
-                        <p class="folio-text">PHOTOGRAPHERS</p>
+                        <img class="folio-img" src="Images/Front_Page/Visual%20Effects.jpg">
+                        <p class="folio-text">VISUAL EFFECTS</p>
                     </div>
                 </div>
                 <div class="folio-column">
                      <div class="folio-box">
-                        <img class="folio-img" src="Images/Front_Page/outer-banks-web-development-hosting.jpg">
-                        <p class="folio-text">PHOTOGRAPHERS</p>
+                        <img class="folio-img" src="Images/Front_Page/miscellaneous.jpg">
+                        <p class="folio-text">MISCELLANEOUS</p>
                     </div>
                 </div>
             </div>
