--- a/Sub-Categorys/Networking/Rasberry_Pi_Web_Server/Webserver.html
+++ b/Sub-Categorys/Networking/Rasberry_Pi_Web_Server/Webserver.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" type="image/png" href="Images/Logos/CineSpirit%20Logo%20Design.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cine+ Spirit Portfolio</title>
-    <link href="ProductPage.css" rel="stylesheet">
-    <script src="jquery-3.5.1.js"></script>
+    <link href="/Sub-Categorys/ProductPage.css" rel="stylesheet">
+    <script src="/Javascript/jquery-3.5.1.js"></script>
 </head>
 
 <body onload="myLoading()">
@@ -18,10 +18,10 @@
         <!-- Nav Bar -->
         <section>
             <nav class="topnav" id="myTopnav">
-                <img class="logo" src="Images/Logos/Text.png">
-                <a href="#blog">Blog</a>
-                <a href="#featured">Featured</a>
-                <a href="#content">About</a>
+                <img class="logo" src="/Images/Homepage/Logo/Text.png">
+                <a href="index.html">Contact</a>
+                <a href="#">Featured</a>
+                <a href="#">About</a>
                 <a href="index.html">Home</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
@@ -147,10 +147,6 @@
         <!-- Seporator -->
         <section>
             <div class="seperator">
-            </div>
-        </section>
-        <section>
-            <div class="seperator">
                 <div class="container">
                 </div>
             </div>
@@ -159,7 +155,7 @@
         <section>
             <footer class="footer-distributed">
                 <div class="footer-left">
-                    <img src="Images/Logos/Text.png">
+                    <img src="/Images/Homepage/Logo/Text.png">
                     <p class="footer-links">
                         <a href="#">Home</a>
                         |
@@ -200,7 +196,6 @@
                 </div>
             </footer>
         </section>
-
         <script>
             var myVar;
 
