New Wepages and Text Edits
Personalised Text Edits
SubCategory Webpages
New Nav Bar

--- a/Sub-Categorys/Networking/Open_Stack_Server/Open_Stack_Server.html
+++ b/Sub-Categorys/Networking/Open_Stack_Server/Open_Stack_Server.html
@@ -184,7 +184,7 @@
                 <div class="footer-right">
                     <p class="footer-company-about">
                         <span>About Gerard Marshall</span>
-                        I a respository of training materials across Technology, Design, Networking, Filmaking and Asset Management.<span style=" color:rgb(252,53,101); font-size: 13px; margin: 0; line-height: 20px;font-weight: normal">Feel Free to Follow Below...</span>
+                        We offer training and skill building courses across Technology, Design, Management, Science and Humanities.
                     </p>
                     <div class="footer-icons">
                         <a href="https://www.facebook.com/Gerarddude5100"><i class="fa fa-facebook"></i></a>
