--- a/Sub-Categorys/Programming/Basic_Website_Creation/Basic_Website_Creation.html
+++ b/Sub-Categorys/Programming/Basic_Website_Creation/Basic_Website_Creation.html
@@ -30,12 +30,12 @@
         </section>
         <!-- Header -->
         <section id="home">
-            <div class="header">
+            <div class="header" style="background-image: url(/Images/Sub_Categorys/Programming/Basic_Website/Basic_Website_Header_Top.jpg)">
                 <div class="header-overlay">
                     <div class="container">
                         <div class="header-text">
                             <p class="header-text-1">BUILD WITH FREE IMAGINATION</p>
-                            <p class="header-text-2">BUILDING A RASBERRY PI<br> WEB SERVER</p>
+                            <p class="header-text-2">BASIC WEBSITE<br> CREATION</p>
                             <p class="header-text-3">Portfoliobox lets you build your own online portfolio you<br> can mange galleries,e-commerce, blogs and much more</p>
                             <a href="#content">
                             <button class="header-btn">INSTRUCTIONS</button>
@@ -56,9 +56,9 @@
             <div class="article">
                 <div class="intro-container">
                     <div class="intro-header">
-                        <h1>Building a Rasberry Pi Web Server:<br>
-                            <p class="intro-header-2">A Cheap and Free Webhosting Solution</p>
-                            <p class="intro-byline">By <span><a href="https://www.linkedin.com/in/gerard-marshall-959106ba/" rel="author"><span>Gerard Marshall</span></a></span> September 19, 2020</p>
+                        <h1>Building a Simple Website:<br>
+                            <p class="intro-header-2">A Cheap and Free Web Creation Process</p>
+                            <p class="intro-byline">By <span><a href="https://www.linkedin.com/in/gerard-marshall-959106ba/" rel="author"><span>Gerard Marshall</span></a></span> Novermber 20, 2020</p>
                             <hr class="intro-solid">
                         </h1><br>
                     </div>
