--- a/Sub-Categorys/Sub_Category_Visual_Effects.html
+++ b/Sub-Categorys/Sub_Category_Visual_Effects.html
@@ -30,13 +30,13 @@
         </section>
         <!-- Header -->
         <section id="home">
-            <div class="header">
+            <div class="header" style="background-image: url(/Images/Sub_Categorys/Visual_Effects/Visual_Effects_Sub_Categorys_Main.jpg)">
                 <div class="header-overlay">
                     <div class="container">
                         <div class="header-text">
                             <p class="header-text-1">SIMPLE YET SOPHISTICATED</p>
-                            <p class="header-text-2">COMPUTER NETWORKING<br> PROJECTS</p>
-                            <p class="header-text-3">Indepth Guides to producing your own personalised <br>Computer Network Projects</p>
+                            <p class="header-text-2">VISUAL EFFECTS<br> PROJECTS</p>
+                            <p class="header-text-3">Indepth Guides to producing your own personalised <br>Visual Effects Projects</p>
                             <a href="#allprojects">
                                 <button class="header-btn">ALL PROJECTS</button>
                             </a>
@@ -57,7 +57,7 @@
                 <div class="container">
                     <div class="folio-head">
                         <h2>We are continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
-                        <p>Below we our most recent Computer Networking projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
+                        <p>Below we our most recent Visual Effects Projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
                         <hr class="folio-solid"><br>
                     </div>
                     <div class="folio-row">
