--- a/Sub-Categorys/Sub_Category_Programming.html
+++ b/Sub-Categorys/Sub_Category_Programming.html
@@ -30,12 +30,12 @@
         </section>
         <!-- Header -->
         <section id="home">
-            <div class="header">
+            <div class="header" style="background-image: url(/Images/Sub_Categorys/Programming/Programming_Sub_Categorys_Main.jpg)">
                 <div class="header-overlay">
                     <div class="container">
                         <div class="header-text">
                             <p class="header-text-1">SIMPLE YET SOPHISTICATED</p>
-                            <p class="header-text-2">COMPUTER NETWORKING<br> PROJECTS</p>
+                            <p class="header-text-2">COMPUTER PROGRAMING<br> PROJECTS</p>
                             <p class="header-text-3">Indepth Guides to producing your own personalised <br>Computer Network Projects</p>
                             <a href="#allprojects">
                                 <button class="header-btn">ALL PROJECTS</button>
@@ -57,15 +57,15 @@
                 <div class="container">
                     <div class="folio-head">
                         <h2>We are continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
-                        <p>Below we our most recent Computer Networking projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
+                        <p>Below we our most recent Computer Programing projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
                         <hr class="folio-solid"><br>
                     </div>
                     <div class="folio-row">
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Networking/Rasberry_Pi_Web_Server/Webserver.html">
-                                    <img class="folio-img" src="/Images/Sub_Categorys/Networking/Rasberry.jpg">
-                                    <p class="folio-text">RASBERRY PI WEB SERVER</p>
+                                <a href="/Sub-Categorys/Programming/Basic_Website_Creation/Basic_Website_Creation.html">
+                                    <img class="folio-img" src="/Images/Sub_Categorys/Programming/Basic_Website/Basic_Website_Header_Top.jpg">
+                                    <p class="folio-text">BASIC WEBSITE</p>
                                 </a>
                             </div>
                         </div>
