--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <div class="container">
                         <div class="header-text">
                             <p class="header-text-1">BUILD WITH FREE IMAGINATION</p>
-                            <p class="header-text-2">ONLINE PORTFOLIOS<br> FOR CREATIVES</p>
-                            <p class="header-text-3">A Repository for All infomation Regarding Tech, Games</p>
+                            <p class="header-text-2">ONLINE PORTFOLIO<br> FOR CREATIVE PROJECTS</p>
+                            <p class="header-text-3">A Repository for tutorials</p>
                             <a href="#featured">
                                 <button class="header-btn">CURRENT PROJECTS</button>
                             </a>
@@ -57,9 +57,9 @@
                     <div class="intro-row">
                         <div class="intro-column-left">
                             <h1 class="intro-header">Hi, I'm<span style="color: #e63946"> Gerard</span></h1>
-                            <p class="intro-text">Aspiring Web Developer, Programmer and 2D Compositor <br> facinated in creating new and intresting Projects. </p>
+                            <p class="intro-text">Aspiring Web Developer, Programmer and 2D Compositor <br> facinated in creating new and interesting Projects. </p>
                             <p class="intro-text">Currently based in Hampshire, UK, specialising in<br>
-                                Digital Asset Management for <span style="color: black" ;>Huawei.</span></p>
+                                Digital Asset Management.<span style="color: black" ;></span></p>
                             <button class="intro-button">Check out my Speciality's</button>
                         </div>
                         <div class="intro-column-right">
@@ -78,7 +78,8 @@
                             <div class="skills-box">
                                 <img class="skills-img" src="/Images/Homepage/Icons/design%20-%20Copy.png">
                                 <h2 class="skills-head" style="color:#e63946" ;>Web-Design</h2>
-                                <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
+                                <p class="skills-text" style="color: #e63946">A Designer with a passion for producing clean design patterns and thoughtful interactions.</p>
+                                <p class="skills-text" style="color: #e63946; font-weight: bold; margin: 0px">HTML | CSS | PHP</p>
                                 <!-- <button class="skills-button">Click Here</button> -->
                             </div>
                         </div>
@@ -86,7 +87,8 @@
                             <div class="skills-box">
                                 <img class="skills-img" src="/Images/Homepage/Icons/Web-design%20-%20Copy.png">
                                 <h2 class="skills-head" style="color: #457b9d">Programming</h2>
-                                <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
+                                <p class="skills-text" style="color: #457b9d">I like to code projects from scratch and enjoy bringing ideas to life in a digital format.</p>
+                                <p class="skills-text" style="color: #457b9d; font-weight: bold; margin: 0px">JAVA</p>
                                 <div class="skills-box-1">
                                     <!-- <button class="skills-button-1">Click Here</button> -->
                                 </div>
@@ -97,7 +99,8 @@
                             <div class="skills-box">
                                 <img class="skills-img" src="Images/Homepage/Icons/com%20-%20Copy.png">
                                 <h2 class="skills-head" style="color: #f4a261">2D Compositing</h2>
-                                <p>A Live update on the Current Completion of Asset Quality checks for January 2020</p>
+                                <p class="skills-text" style="color: #f4a261">Passion for creating facinating visuals and solving ntechnical issues</p>
+                                <p class="skills-text" style="color: #f4a261; font-weight: bold; margin: 0px">AE | PP | Nuke | 3ds Max</p>
                                 <!-- <button class="skills-button-2">Click Here</button> -->
                             </div>
                         </div>
@@ -123,17 +126,19 @@
             <div class="folio">
                 <div class="container">
                     <div class="folio-head" id="featured">
-                        <h2>We are continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
-                        <p>Below we our most recent Computer Networking projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
+                        <h2>I am continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
+                        <p>Below are the most recent Computer Networking projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
                         <hr class="folio-solid"><br>
                     </div>
                     <div class="folio-row">
                         <div class="folio-column">
                             <div class="folio-box">
+                                <a href="/Sub-Categorys/Sub_Category_Gaming.html">
                                 <img class="folio-img" src="Images/Homepage/Gaming.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">GAMING</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                         <div class="folio-column">
@@ -148,36 +153,44 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
+                                <a href="/Sub-Categorys/Sub_Category_Programming.html">
                                 <img class="folio-img" src="Images/Homepage/Programming.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">PROGRAMMING</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="folio-row">
                         <div class="folio-column">
                             <div class="folio-box">
+                                <a href="#">
                                 <img class="folio-img" src="Images/Homepage/Digital%20Assets.png">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">DIGITAL ASSET</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
+                                <a href="/Sub-Categorys/Sub_Category_Visual_Effects.html">
                                 <img class="folio-img" src="Images/Homepage/Visual%20Effects.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">VISUAL EFFECTS</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
+                                <a href="/Sub-Categorys/Sub_Category_Miscellaneous.html">
                                 <img class="folio-img" src="Images/Homepage/miscellaneous.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">MISCELLANEOUS</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -232,7 +245,7 @@
                 <div class="footer-right">
                     <p class="footer-company-about">
                         <span>About Gerard Marshall</span>
-                        We offer training and skill building courses across Technology, Design, Management, Science and Humanities.
+                        I a respository of training materials across Technology, Design, Networking, Filmaking and Asset Management.<span style=" color:rgb(252,53,101); font-size: 13px; margin: 0; line-height: 20px;font-weight: normal">Feel Free to Follow Below...</span>
                     </p>
                     <div class="footer-icons">
                         <a href="https://www.facebook.com/Gerarddude5100"><i class="fa fa-facebook"></i></a>
