--- a/Sub-Categorys/Programming/Excel_Programming/Multiple_Dropdown/Multiple_Dropdown_Creation.html
+++ b/Sub-Categorys/Programming/Excel_Programming/Multiple_Dropdown/Multiple_Dropdown_Creation.html
@@ -30,13 +30,13 @@
         </section>
         <!-- Header -->
         <section id="home">
-            <div class="header">
+            <div class="header" style="background-image: url(/Images/Sub_Categorys/Programming/Excel_Programming/Creating_Dropdowns/Creating_Dropdowns_Header.jpg)">
                 <div class="header-overlay">
                     <div class="container">
                         <div class="header-text">
-                            <p class="header-text-1">BUILD WITH FREE IMAGINATION</p>
-                            <p class="header-text-2">BUILDING A RASBERRY PI<br> WEB SERVER</p>
-                            <p class="header-text-3">Portfoliobox lets you build your own online portfolio you<br> can mange galleries,e-commerce, blogs and much more</p>
+                            <p class="header-text-1" style="color: lightgreen">BUILD WITH FREE IMAGINATION</p>
+                            <p class="header-text-2">EXCEL PROGRAMMING<br> MULTIPLE DROPDOWN  VALUES</p>
+                            <p class="header-text-3" style="color: lightgreen">Portfoliobox lets you build your own online portfolio you<br> can mange galleries,e-commerce, blogs and much more</p>
                             <a href="#content">
                             <button class="header-btn">INSTRUCTIONS</button>
                             </a>
@@ -56,29 +56,26 @@
             <div class="article">
                 <div class="intro-container">
                     <div class="intro-header">
-                        <h1>Building a Rasberry Pi Web Server:<br>
-                            <p class="intro-header-2">A Cheap and Free Webhosting Solution</p>
+                        <h1>Multiple Excel Dropdowns Values<br>
+                            <p class="intro-header-2" style="color: darkgreen">A Simple solution enabling Multiple Values in a Single Excel Field</p>
                             <p class="intro-byline">By <span><a href="https://www.linkedin.com/in/gerard-marshall-959106ba/" rel="author"><span>Gerard Marshall</span></a></span> September 19, 2020</p>
-                            <hr class="intro-solid">
+                            <hr class="intro-solid" style="border: 2px solid darkgreen">
                         </h1><br>
                     </div>
                     <div class="intro-content">
                         <div class="intro-row">
                             <div class="intro-column-left">
-                                <h1 class="intro-column-header">Basic Overview<br>
-                                    <hr class="intro-column-line">
+                                <h1 class="intro-column-header" style="color: darkgreen">Basic Overview<br>
+                                    <hr class="intro-column-line" style="border: 2px solid darkgreen">
                                 </h1><br>
                                 <h3>Introduction: What will be created...</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+                                <p>Instead of being limited by one value in the default Data Validation drop down list, you will be creating a single customisable Macro to allow <span style="color: darkgreen; font-weight: bold">Multiple Selections.</span></p>
                                 <h3>Conclusion: What you will learn...</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+                                <p>You learn how to use simple VBA code to create functionality for a Macro within Microsoft Excel.</p>
                                 <h3>Requirements: What you need...</h3>
-                                <ul class="intro-list">
-                                    <li>Rasberry Pi (2, 3 or 4)</li>
-                                    <li>PC/MAC</li>
-                                    <li>XAMPP</li>
-                                    <li>Portforwarding Knowledge</li>
-                                    <li>SSH Software</li>
+                                <ul class="intro-list" style="color: darkgreen;">
+                                    <li>Microsoft Excel </li>
+                                    <li>Basic Knowledge of VBA</li>
                                 </ul>
                             </div>
                             <div class="intro-column-right">
@@ -93,18 +90,18 @@
         </section>
         <!--Content-->
         <section id="content">
-            <div class="con-how">
+            <div class="con-how" style="background-image: url(/Images/Sub_Categorys/Programming/Excel_Programming/Creating_Dropdowns/Creating_Dropdowns_Header_Top.png)">
                 <div class="con-overlay">
                     <div class="container">
-                        <h1 class="con-con-header">Directions from A to Z <br>
-                            <hr class="con-con-line">
+                        <h1 class="con-con-header" style="color: lightgreen">Directions from A to Z <br>
+                            <hr class="con-con-line" style="border: 2px solid lightgreen">
                         </h1><br>
                         <h3>Step 1</h3>
                         <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p>
-                        <hr class="con-line">
+                        <hr class="con-line" style="border: 2px solid lightgreen">
                         <h3>Step 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <hr class="con-line">
+                        <hr class="con-line" style="border: 2px solid lightgreen">
                         <div class="con-media">
                             <div class="con-row">
                                 <div class="con-column-left">
@@ -121,21 +118,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="con-quote">
+                        <div class="con-quote" style="color: lightgreen">
                             <h1>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</h1>
-                            <hr class="con-solid">
+                            <hr class="con-solid" style="border: 2px solid lightgreen">
                         </div>
                         <h3>Step 5</h3>
-                        <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p><hr class="con-line">
+                        <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p><hr class="con-line" style="border: 2px solid lightgreen">
                         <h3>Step 6: Cooling</h3>
                         <p>"We had indications that H2O – the familiar water we know – might be present on the sunlit side of the Moon," Paul Hertz, director of the Astrophysics Division in the Science Mission Directorate at NASA Headquarters in Washington said. "Now we know it is there. This discovery challenges our understanding of the lunar surface and raises intriguing questions about resources relevant for deep space exploration."</p>
                         <h3>Step 7</h3>
                         <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p>
                         <h3>Step 8</h3>
                         <p>"We had indications that H2O – the familiar water we know – might be present on the sunlit side of the Moon," Paul Hertz, director of the Astrophysics Division in the Science Mission Directorate at NASA Headquarters in Washington said. "Now we know it is there. This discovery challenges our understanding of the lunar surface and raises intriguing questions about resources relevant for deep space exploration."</p>
-                        <div class="con-quote">
+                        <div class="con-quote" style="color: lightgreen">
                             <h1>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</h1>
-                            <hr class="con-solid">
+                            <hr class="con-solid" style="border: 2px solid lightgreen">
                         </div>
                         <div class="con-end-vid">
                             <iframe class="con-end-vid-iframe" src="https://www.youtube.com/embed/yyyXp_8EXe8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -170,11 +167,7 @@
                 <div class="footer-center">
                     <div>
                         <i class="fa fa-map-marker"></i>
-                        <p><span>Hampshire, Basingstoke.</span>UK, United Kingdom</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-phone"></i>
-                        <p>+44 07-906280402</p>
+                        <p><span>Hampshire, England.</span>UK, United Kingdom</p>
                     </div>
                     <div>
                         <i class="fa fa-envelope"></i>
