--- a/Sub-Categorys/Sub_Category_Visual_Effects.html
+++ b/Sub-Categorys/Sub_Category_Visual_Effects.html
@@ -150,11 +150,7 @@
                 <div class="footer-center">
                     <div>
                         <i class="fa fa-map-marker"></i>
-                        <p><span>Hampshire, Basingstoke.</span>UK, United Kingdom</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-phone"></i>
-                        <p>+44 07-906280402</p>
+                        <p><span>Hampshire, England.</span>UK, United Kingdom</p>
                     </div>
                     <div>
                         <i class="fa fa-envelope"></i>
