--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="folio-row">
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Sub_Category_Gaming.html">
+                                <a href="/Coming_Soon.html">
                                 <img class="folio-img" src="Images/Homepage/Gaming.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">GAMING</div>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Sub_Category_Networking.html">
+                                <a href="/Coming_Soon.html">
                                     <img class="folio-img" src="Images/Homepage/Networking.jpg">
                                     <div class="folio-img-overlay">
                                         <div class="folio-text">NETWORKING</div>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Sub_Category_Programming.html">
+                                <a href="/Coming_Soon.html">
                                 <img class="folio-img" src="Images/Homepage/Programming.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">PROGRAMMING</div>
@@ -165,7 +165,7 @@
                     <div class="folio-row">
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="#">
+                                <a href="/Coming_Soon.html">
                                 <img class="folio-img" src="Images/Homepage/Digital%20Assets.png">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">DIGITAL ASSET</div>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Sub_Category_Visual_Effects.html">
+                                <a href="/Coming_Soon.html">
                                 <img class="folio-img" src="Images/Homepage/Visual%20Effects.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">VISUAL EFFECTS</div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Sub-Categorys/Sub_Category_Miscellaneous.html">
+                                <a href="/Coming_Soon.html">
                                 <img class="folio-img" src="Images/Homepage/miscellaneous.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">MISCELLANEOUS</div>
@@ -231,11 +231,7 @@
                 <div class="footer-center">
                     <div>
                         <i class="fa fa-map-marker"></i>
-                        <p><span>Hampshire, Basingstoke.</span>UK, United Kingdom</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-phone"></i>
-                        <p>+44 07-906280402</p>
+                        <p><span>Hampshire, England </span>UK, United Kingdom</p>
                     </div>
                     <div>
                         <i class="fa fa-envelope"></i>
