Font Text and Design Update
Font, And Nav Bar Design Update. New Coming soon Page intergrated

--- a/Coming_Soon.html
+++ b/Coming_Soon.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="Images/Logos/CineSpirit%20Logo%20Design.png">
+    <link rel="shortcut icon" type="image/png" href="Images/Homepage/Logo/CineSpirit_Youtube_Thumbnail.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cine+ Spirit Portfolio</title>
     <link href="Coming_Soon.css" rel="stylesheet">
@@ -22,7 +22,7 @@
                     <div class="container">
                         <div class="header-text">
                             <p class="header-text-2">PAGE UNDER<span style="font-weight:lighter"> CONSTRUCTION</span></p>
-                            <p class="header-text-3">Hold tight as the new page is being created <br>to produce more exciting content</p>
+                            <p class="header-text-3">Hold tight as the new page is being created <br>to provide more exciting content.</p>
                             <div id="countdown">
                                 <ul>
                                     <li><span id="days"></span>days</li>
@@ -36,7 +36,8 @@
                             </a>
                             <a href="/index.html">
                                 <button class="header-btn">RETURN HOME</button>
-                            </a>
+                            </a><br>
+                            <img class="logo" src="Images/Homepage/Logo/Cine_Spirit_Logo_(White_White).png">
                         </div>
                     </div>
                 </div>
@@ -63,7 +64,7 @@
                     hour = minute * 60,
                     day = hour * 24;
 
-                let birthday = "Dec 30, 2020 00:00:00",
+                let birthday = "Jan 10, 2021 00:00:00",
                     countDown = new Date(birthday).getTime(),
                     x = setInterval(function() {
 
