--- a/Sub-Categorys/Programming/Excel_Programming/Multiple_Dropdown/Multiple_Dropdown_Creation.html
+++ b/Sub-Categorys/Programming/Excel_Programming/Multiple_Dropdown/Multiple_Dropdown_Creation.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="Images/Logos/CineSpirit%20Logo%20Design.png">
+    <link rel="shortcut icon" type="image/png" href="Images/Homepage/Logo/CineSpirit_Youtube_Thumbnail.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cine+ Spirit Portfolio</title>
     <link href="/Sub-Categorys/ProductPage.css" rel="stylesheet">
@@ -18,7 +18,7 @@
         <!-- Nav Bar -->
         <section>
             <nav class="topnav" id="myTopnav">
-                <img class="logo" src="/Images/Homepage/Logo/Text.png">
+                <img class="logo" src="/Images/Homepage/Logo/CineSpirit_Website_Logo_Text.png">
                 <a href="#">Contact</a>
                 <a href="#">Featured</a>
                 <a href="#">About</a>
@@ -34,8 +34,8 @@
                 <div class="header-overlay">
                     <div class="container">
                         <div class="header-text">
-                            <p class="header-text-1" style="color: lightgreen">BUILD WITH FREE IMAGINATION</p>
-                            <p class="header-text-2">EXCEL PROGRAMMING<br> MULTIPLE DROPDOWN  VALUES</p>
+                            <p class="header-text-1" style="color: lightgreen">EXCEL PROGRAMMING</p>
+                            <p class="header-text-2">MULTIPLE DROPDOWN  VALUES</p>
                             <p class="header-text-3" style="color: lightgreen">Portfoliobox lets you build your own online portfolio you<br> can mange galleries,e-commerce, blogs and much more</p>
                             <a href="#content">
                             <button class="header-btn">INSTRUCTIONS</button>
@@ -152,7 +152,7 @@
         <section>
             <footer class="footer-distributed">
                 <div class="footer-left">
-                    <img src="/Images/Homepage/Logo/Text.png">
+                    <img src="/Images/Homepage/Logo/CineSpirit_Website_Logo_White.png">
                     <p class="footer-links">
                         <a href="#">Home</a>
                         |
