--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="Images/Logos/CineSpirit%20Logo%20Design.png">
+    <link rel="shortcut icon" type="image/png" href="Images/Homepage/Logo/CineSpirit_Youtube_Thumbnail.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cine+ Spirit Portfolio</title>
     <link href="Homepage.css" rel="stylesheet">
@@ -19,7 +19,7 @@
         <!-- Nav Bar -->
         <section>
             <nav class="topnav" id="myTopnav">
-                <img class="logo" src="/Images/Homepage/Logo/Text.png">
+                <img class="logo" src="/Images/Homepage/Logo/CineSpirit_Website_Logo_Text.png">
                 <a href="#contact">Contact</a>
                 <a href="#featured">Featured</a>
                 <a href="#curve">About</a>
@@ -57,7 +57,7 @@
                     <div class="intro-row">
                         <div class="intro-column-left">
                             <h1 class="intro-header">Hi, I'm<span style="color: #e63946"> Gerard</span></h1>
-                            <p class="intro-text">Aspiring Web Developer, Programmer and 2D Compositor <br> facinated in creating new and interesting Projects. </p>
+                            <p class="intro-text">Aspiring <span style="color: rgb(252, 53, 101)">Web Developer</span>, <span style="color: rgb(252, 53, 101)">Programmer</span> and <span style="color: rgb(252, 53, 101)">2D Compositor</span> facinated in creating new and interesting Projects. </p>
                             <p class="intro-text">Currently based in Hampshire, UK, specialising in<br>
                                 Digital Asset Management.<span style="color: black" ;></span></p>
                             <button class="intro-button">Check out my Speciality's</button>
@@ -85,10 +85,10 @@
                         </div>
                         <div class="skills-column">
                             <div class="skills-box">
-                                <img class="skills-img" src="/Images/Homepage/Icons/Web-design%20-%20Copy.png">
-                                <h2 class="skills-head" style="color: #457b9d">Programming</h2>
-                                <p class="skills-text" style="color: #457b9d">I like to code projects from scratch and enjoy bringing ideas to life in a digital format.</p>
-                                <p class="skills-text" style="color: #457b9d; font-weight: bold; margin: 0px">JAVA</p>
+                                <img class="skills-img" src="/Images/Homepage/Icons/Web-design_Crimson.png">
+                                <h2 class="skills-head" style="color: #e63946">Programming</h2>
+                                <p class="skills-text" style="color: #e63946">I like to code projects from scratch and enjoy bringing ideas to life in a digital format.</p>
+                                <p class="skills-text" style="color: #e63946; font-weight: bold; margin: 0px">JAVA</p>
                                 <div class="skills-box-1">
                                     <!-- <button class="skills-button-1">Click Here</button> -->
                                 </div>
@@ -97,10 +97,10 @@
 
                         <div class="skills-column">
                             <div class="skills-box">
-                                <img class="skills-img" src="Images/Homepage/Icons/com%20-%20Copy.png">
-                                <h2 class="skills-head" style="color: #f4a261">2D Compositing</h2>
-                                <p class="skills-text" style="color: #f4a261">Passion for creating facinating visuals and solving ntechnical issues</p>
-                                <p class="skills-text" style="color: #f4a261; font-weight: bold; margin: 0px">AE | PP | Nuke | 3ds Max</p>
+                                <img class="skills-img" src="Images/Homepage/Icons/Compositing_Crimson.png">
+                                <h2 class="skills-head" style="color: #e63946">2D Compositing</h2>
+                                <p class="skills-text" style="color: #e63946">Passion for creating facinating visuals and solving ntechnical issues</p>
+                                <p class="skills-text" style="color: #e63946; font-weight: bold; margin: 0px">AE | PP | Nuke | 3ds Max</p>
                                 <!-- <button class="skills-button-2">Click Here</button> -->
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="folio-column">
                             <div class="folio-box">
-                                <a href="/Coming_Soon.html">
+                                <a href="/Sub-Categorys/Sub_Category_Programming.html">
                                 <img class="folio-img" src="Images/Homepage/Programming.jpg">
                                 <div class="folio-img-overlay">
                                     <div class="folio-text">PROGRAMMING</div>
@@ -205,7 +205,7 @@
             <div class="further" id="#contact">
                 <div class="container">
                     <h2 class="further-text">Any <span style="color:rgb(252,53,101">Projects</span> you think could be interesting?</h2>
-                    <a href="mailto:gerard.marshall41@yahoo.co.uk">
+                    <a href="mailto:enquiries@cinespirit.uk">
                         <button class="further-button">Contact Us</button>
                     </a>
                     <p class="further-text-con">Have any other <span style="color: rgb(252,53,101)">Questions?</span> See our <span style="color: rgb(252,53,101)">Q&A</span></p>
@@ -216,7 +216,7 @@
         <section>
             <footer class="footer-distributed">
                 <div class="footer-left">
-                    <img src="/Images/Homepage/Logo/Text.png">
+                    <img src="/Images/Homepage/Logo/CineSpirit_Website_Logo_White.png">
                     <p class="footer-links">
                         <a href="#">Home</a>
                         |
@@ -241,7 +241,7 @@
                 <div class="footer-right">
                     <p class="footer-company-about">
                         <span>About Gerard Marshall</span>
-                        I a respository of training materials across Technology, Design, Networking, Filmaking and Asset Management.<span style=" color:rgb(252,53,101); font-size: 13px; margin: 0; line-height: 20px;font-weight: normal">Feel Free to Follow Below...</span>
+                        I a respository of training materials across Technology, Design, Networking, Filmaking and Asset Management.<span style=" color:#e63946; font-size: 13px; margin: 0; line-height: 20px;font-weight: normal">Feel Free to Follow Below...</span>
                     </p>
                     <div class="footer-icons">
                         <a href="https://www.facebook.com/Gerarddude5100"><i class="fa fa-facebook"></i></a>
